--- a/src/style/global.css
+++ b/src/style/global.css
@@ -944,6 +944,11 @@ div {
   font-size: 1.15rem;
 }
 
+.detailPage .detail h2 span {
+  font-size: 75%;
+  opacity: 0.75;
+}
+
 .detailPage .detail h3 {
   font-size: 0.9rem;
   color: darkcyan;
@@ -998,16 +1003,31 @@ div {
   }
 }
 
-.detailPage .apply h4 {
+.detailPage .apply .apply_item {
+  margin-bottom: 10px;
+}
+
+.detailPage .apply .apply_item h4 {
   width: 75px;
   line-height: 24px;
 }
 
-.detailPage .apply p {
-  margin: 0 5px;
+.detailPage .apply .apply_item p {
+  font-weight: 500;
 }
 
-.detailPage .apply .button {
+.detailPage .apply .apply_item p span {
+  font-weight: normal;
+  font-size: 75%;
+}
+
+@media (min-width: 575px) {
+  .detailPage .apply .apply_item {
+    display: flex;
+  }
+}
+
+.detailPage .button {
   width: 250px;
   height: 40px;
   line-height: 40px;
@@ -1016,32 +1036,22 @@ div {
   color: white;
   font-weight: bold;
   text-align: center;
-  margin: 50px auto 0;
+  margin: 50px auto;
   cursor: pointer;
+}
+
+.detailPage .title_facility {
+  background-color: var(--main);
+  color: white;
+  width: max-content;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  padding: 5px 20px;
+  margin-left: calc(5% + 10px);
 }
 
 .facilityPage {
   background-color: var(--second);
-}
-
-.facilityPage .title_facility {
-  width: 90%;
-  margin: 20px auto 0;
-  max-width: 992px;
-}
-
-.facilityPage .title_facility p {
-  height: 40px;
-  width: 125px;
-  line-height: 40px;
-  margin: 0 10px;
-  background-color: var(--main);
-  color: white;
-  text-align: center;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-  font-weight: bold;
-  letter-spacing: 1px;
 }
 
 .facilityPage .detail {
@@ -1081,6 +1091,7 @@ div {
 .facilityPage .detail .content h3 {
   margin-bottom: 0px;
   font-size: 1.25rem;
+  color: inherit;
 }
 
 .facilityPage .detail .content .facility_name {
@@ -1130,6 +1141,11 @@ div {
   aspect-ratio: 2.5;
   background-color: #aaa;
   border-radius: 5px;
+}
+
+.facilityPage .detail .content .altImage h1 {
+  color: white;
+  margin: 0;
 }
 
 .searchPage {
@@ -1186,31 +1202,37 @@ div {
   padding: 5px 20px;
 }
 
-.searchPage .content .item .item-img {
-  overflow: hidden;
-  aspect-ratio: 1.5;
-}
-
-.searchPage .content .item .item-content {
+.searchPage .content .item .item-col .item-content {
   width: 100%;
   min-height: 100px;
-  padding: 10px;
   margin-top: 30px;
   border-radius: 5px;
 }
 
-.searchPage .content .item .item-content h3 {
+.searchPage .content .item .item-col .item-content h3 {
   margin-bottom: 5px;
   color: var(--main);
 }
 
-.searchPage .content .item .item-content h4 {
+.searchPage .content .item .item-col .item-content h4 {
   font-weight: normal;
   margin-bottom: 5px;
 }
 
-.searchPage .content .item .item-content h4 span {
+.searchPage .content .item .item-col .item-content h4 span {
   font-weight: bold;
+}
+
+.searchPage .content .item .item-col .item-content p {
+  background-color: inherit;
+  color: inherit;
+  padding: 0;
+  margin: 0;
+}
+
+.searchPage .content .item .item-img {
+  overflow: hidden;
+  aspect-ratio: 1.5;
 }
 
 .searchPage .content .item .button {
