--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1038,6 +1038,39 @@ div {
             }
         }
 
+        .content_news {
+            text-align: center;
+
+            h2 {
+                margin-bottom: 5px;
+            }
+
+            .category {
+                width: max-content;
+                margin: auto;
+                margin-bottom: 10px;
+                display: flex;
+
+                p {
+                    height: 30px;
+                    line-height: 30px;
+                    padding: 0px 10px;
+                    border-radius: 15px;
+                    margin: 0 5px;
+                    background-color: var(--main);
+                    color: white;
+                }
+
+            }
+
+            .text {
+                width: 90%;
+                max-width: 768px;
+                margin: auto;
+                text-align: justify;
+            }
+        }
+
         @media (min-width:575px) {
             h1 {
                 font-size: 1.5rem;
