--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1038,6 +1038,10 @@ div {
 
             .dangerousBox {
                 min-height: 400px;
+
+                p {
+                    margin-bottom: 1em;
+                }
             }
         }
 
