--- a/src/style/global.css
+++ b/src/style/global.css
@@ -434,15 +434,17 @@ div {
 
 .contain_V2 .cover {
   display: flex;
+  width: 100%;
   height: calc(100vh - 100px);
   max-height: 700px;
   overflow: hidden;
   position: relative;
+  flex-direction: column;
 }
 
 .contain_V2 .cover .cover_left {
   height: 100%;
-  width: 50%;
+  width: 100%;
   background: rgba(0, 0, 0, 0.5) url("/img/cover3.jpg") no-repeat center;
   background-size: cover;
   cursor: pointer;
@@ -451,7 +453,7 @@ div {
 
 .contain_V2 .cover .cover_right {
   height: 100%;
-  width: 50%;
+  width: 100%;
   background: rgba(0, 0, 0, 0.5) url("/img/cover2.jpg") no-repeat center;
   background-size: cover;
   cursor: pointer;
@@ -504,6 +506,12 @@ div {
   transform: translateY(0%);
   left: 0;
   right: auto;
+}
+
+@media (min-width: 768px) {
+  .contain_V2 .cover {
+    flex-direction: row;
+  }
 }
 
 .contain_V2 .slogan {
