--- a/src/style/theme.css
+++ b/src/style/theme.css
@@ -35,3 +35,11 @@
     background-color: var(--dark);
     color: var(--light);
 }
+
+.light .bg-even:nth-child(even) {
+    background-color: rgba(0, 0, 0, 0.025);
+}
+
+.dark .bg-even:nth-child(even) {
+    background-color: rgba(255, 255, 255, 0.05);
+}
