--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -654,6 +654,12 @@ div {
                 .item_title {
                     margin-top: 20px;
 
+                    h3 {
+                        text-overflow: ellipsis;
+                        text-wrap: nowrap;
+                        overflow: hidden;
+                    }
+
                     h4 {
                         opacity: 0.75;
                     }
