--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -27,6 +27,7 @@ div {
     box-sizing: border-box;
 }
 
+
 .flexbox {
     display: flex;
 }
@@ -861,6 +862,7 @@ div {
 }
 
 .footer {
+    position: relative;
     background-color: white;
     padding: 2.5%;
 
@@ -892,6 +894,30 @@ div {
             font-size: 16px;
         }
 
+    }
+
+
+    .top_button {
+        position: absolute;
+        top: -50px;
+        right: 50px;
+        width: 100px;
+        height: 100px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        border-radius: 50%;
+        background-color: var(--main);
+        color: white;
+        text-align: center;
+        font-weight: bold;
+        font-size: large;
+        opacity: 0.25;
+        cursor: pointer;
+    }
+
+    .top_button:hover {
+        opacity: 0.75;
     }
 }
 
@@ -1220,7 +1246,7 @@ div {
             margin-bottom: 10px;
 
             h4 {
-                width: 75px;
+                width: 100px;
                 line-height: 24px
             }
 
@@ -1465,4 +1491,12 @@ div {
         }
 
     }
+}
+
+.contact {
+    width: 90%;
+    margin: auto;
+    background-color: white;
+    padding: 5%;
+    max-width: 992px;
 }
